--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.3",
+    "framer-motion": "^6.3.0",
     "react": "^18.0.0",
+    "react-animated-text-content": "^1.0.1",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
