--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animated-text-content": "^1.0.1",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.0.0",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
