--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.3",
+    "dotenv": "^16.0.2",
     "framer-motion": "^6.3.0",
     "gh-pages": "^3.2.3",
     "react": "^18.0.0",
